Fixed content clipping in addon details window

--- a/src/components/AddonDetailsWindow/AddonDetailsWindow.css
+++ b/src/components/AddonDetailsWindow/AddonDetailsWindow.css
@@ -51,7 +51,7 @@
 }
 
 .addon-details-window {
-    height: calc(100vh - 210px);
+    height: calc(100vh - 250px);
     width: 100%;
     overflow: auto;
 }
